--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,8 +1,8 @@
 .App {
     width: 100%;
-    max-height: 100vh;
+    max-height: 100dvh;
+    min-height: 100dvh;
     overflow: hidden;
-    min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
@@ -55,7 +55,7 @@
         }
 
         @media(max-width: 900px) {
-            height: 50vh;
+            height: 50dvh;
             width: 100%;
             border-radius: 0px;
         }
@@ -94,6 +94,13 @@
 
                 @media(max-width: 1400px) {
                     font-size: 24px;
+                }
+            }
+
+            &_text {
+                &_link {
+                    cursor: pointer;
+                    text-decoration: underline;
                 }
             }
 
@@ -146,7 +153,7 @@
 
                 @media(max-width: 900px) {
                     max-width: 100vw;
-                    max-height: 50vh;
+                    max-height: 50dvh;
                 }
             }
         }
