--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,7 +17,7 @@
         position: relative;
         z-index: 99;
         width: 100%;
-        left: 5vh;
+        left: 20vh;
 
         input {
             pointer-events: none;
@@ -38,6 +38,7 @@
         height: 90vh;
         width: calc(100vw - 800px);
         min-width: 300px;
+        max-width: 550px;
         border-radius: 24px;
         padding: 48px;
         background: #000;
@@ -57,6 +58,7 @@
         @media(max-width: 900px) {
             height: 50dvh;
             width: 100%;
+            max-width: 99999px;
             border-radius: 0px;
         }
 
@@ -89,12 +91,12 @@
 
             &_from,
             &_text {
-                font-size: 32px;
+                font-size: 24px;
                 color: #63E940;
 
-                @media(max-width: 1400px) {
-                    font-size: 24px;
-                }
+                // @media(max-width: 1400px) {
+                //     font-size: 24px;
+                // }
             }
 
             &_text {
@@ -155,6 +157,12 @@
                     max-width: 100vw;
                     max-height: 50dvh;
                 }
+            }
+        }
+
+        &_light {
+            img {
+                filter: drop-shadow(20px 0px 13px #0008);
             }
         }
     }
