--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -13,6 +13,40 @@
         align-content: end;
     }
 
+    &_mediaEl {
+        left: -30px;
+        transition: scale 200ms;
+        cursor: pointer;
+
+        img {
+            width: 200px;
+            height: 200px;
+            rotate: -30deg;
+            filter: drop-shadow(0px 0px 10px #0008)
+        }
+
+        &_2,
+        &_3 {
+            left: 30px;
+            top: 150px;
+
+            img {
+                rotate: 10deg;
+
+            }
+        }
+
+        &_2 {
+            top: -150px;
+
+        }
+
+        &:hover {
+            scale: 1.1;
+        }
+
+    }
+
     &_noise {
         width: 100%;
         z-index: 999999;
@@ -32,6 +66,9 @@
         z-index: 99;
         width: 100%;
         left: 20vh;
+        display: flex;
+        align-items: center;
+
 
         input {
             pointer-events: none;
@@ -62,6 +99,9 @@
         align-content: end;
         row-gap: 24px;
         overflow: hidden;
+        position: relative;
+        z-index: 3;
+        box-shadow: 0px 0px 10px #0008;
 
         @media(max-width: 1400px) {
             padding: 32px;
