added some decor

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -45,6 +45,10 @@
             text-shadow: 2.00px 0.00px #63e940, 1.85px 0.77px #63e940, 1.41px 1.41px #63e940, 0.77px 1.85px #63e940, 0.00px 2.00px #63e940, -0.77px 1.85px #63e940, -1.41px 1.41px #63e940, -1.85px 0.77px #63e940, -2.00px 0.00px #63e940, -1.85px -0.77px #63e940, -1.41px -1.41px #63e940, -0.77px -1.85px #63e940, -0.00px -2.00px #63e940, 0.77px -1.85px #63e940, 1.41px -1.41px #63e940, 1.85px -0.77px #63e940, 0px 0px 10px #000;
             align-items: end;
 
+            @media(max-width: 900px) {
+                font-size: 24px;
+            }
+
             &:hover {
                 scale: 1;
             }
@@ -113,9 +117,11 @@
         // align-items: center;
         top: 20px;
 
+
         @media(max-width: 900px) {
             width: 100%;
             order: 2;
+            top: 0px;
             // align-items: start;
         }
 
